--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "state-of-mine",
-  "homepage": "https://kreativekntrl.github.io/state-of-mind",
+  "homepage": "https://kreativekntrl.github.io/state-of-mine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
