--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.67.3",
+    "react-native-web": "^0.17.7",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
