--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "^0.67.3",
     "react-native-web": "^0.17.7",
     "react-pdf": "^5.7.1",
+    "react-photo-gallery-react17": "^8.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
